# QML-C-tutorial

./: CMakeLists.txt  MainPage.qml  Page1.qml  Page2.qml  Section1.qml  Section2.qml  main.cpp  main.qml  people.cpp  people.h  someclass.cpp  someclass.h
